# Alenka-Signal

./: .gitignore  CMakeLists.txt  README.md  download-libraries.sh
include/: filter.h  filterprocessor.h  montage.h  montageprocessor.h  openclcontext.h  openclprogram.h  spikedet.h
include/AlenkaSignal/: filter.h  filterprocessor.h  montage.h  montageprocessor.h  openclcontext.h  openclprogram.h  spikedet.h
spikedet/src/: CDSP.cpp  CDSP.h  CException.cpp  CException.h  CInputModel.h  CMain.h  CMainFrame.h  CResultsModel.cpp  CResultsModel.h  CSettingsDialog.h  CSettingsModel.h  CSpikeDetector.cpp  CSpikeDetector.h  spikedetoutput.h
spikedet/src/wx/: thread.h  wx.h
src/: filter.cpp  filterprocessor.cpp  filtfilt.h  kernels.cl  montage.cpp  montageprocessor.cpp  openclcontext.cpp  openclprogram.cpp  spikedet.cpp
unit-test/: CMakeLists.txt  allpass_test.cpp  filter_allpass_test.cpp  filter_design_test.cpp  filter_test.cpp  montage_static_test.cpp  montage_test_test.cpp  simple_montage_test.cpp  spikedet_test.cpp
unit-test/data/: .gitignore  data.md5  data0.md5  download-data.sh
